--- a/Book/Book/Pages/SearchView.xaml
+++ b/Book/Book/Pages/SearchView.xaml
@@ -16,22 +16,25 @@
                    d:DataContext="{d:DesignData local:SearchViewModel}"
                    d:DesignHeight="450" d:DesignWidth="800">
     <DockPanel Background="White" Margin="10">
-        <DockPanel DockPanel.Dock="Top">
+        <DockPanel DockPanel.Dock="Top" Margin="5">
             <telerik:RadButton Content="搜索" DockPanel.Dock="Right" Command="{s:Action Method=DoSearch}"/>
             <telerik:RadWatermarkTextBox WatermarkContent="请输入搜索关键字" Text="{Binding Path=SearchKeyword,UpdateSourceTrigger=PropertyChanged}"/>
         </DockPanel>
-        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" DockPanel.Dock="Bottom">
+        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" DockPanel.Dock="Bottom" Margin="5">
             <telerik:RadButton Content="确定" VerticalAlignment="Center" Margin="5" Command="{s:Action Method=ConfirmSelect}"/>
             <telerik:RadButton Content="关闭" VerticalAlignment="Center" Margin="5" Command="{s:Action Method=CloseDialog}" IsCancel="True"/>
         </StackPanel>
         <telerik:RadGridView ItemsSource="{Binding Path=BookSearchResults,UpdateSourceTrigger=PropertyChanged,Mode=OneWay}"
                              SelectedItem="{Binding Path=SelectedBookSearchResult,UpdateSourceTrigger=PropertyChanged,Mode=TwoWay}"
                              CanUserSortColumns="False"
-                             IsFilteringAllowed="False"
+                             IsFilteringAllowed="False"            
+                             CanUserResizeColumns="False"
+                             CanUserSelectColumns="False"
+                             CanUserReorderColumns="False"
                              ShowGroupPanel="False"
                              ColumnsSelectionButtonVisibility="Collapsed"
                              MouseDoubleClick="{s:Action Method=SearchResultsViewDoubleClick}"
-                             RowIndicatorVisibility="Collapsed"
+                             RowIndicatorVisibility="Collapsed" Margin="5"
                              AutoGenerateColumns="False" IsReadOnly="True">
             <telerik:RadGridView.Columns>
                 <telerik:GridViewDataColumn Header="书名" DataMemberBinding="{Binding Path=BookName}" Width="*"/>
