--- a/Book/Book/App.xaml
+++ b/Book/Book/App.xaml
@@ -1,11 +1,4 @@
-﻿<Application x:Class="Book.App" 
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Book"
-             xmlns:telerik="http://schemas.telerik.com/2008/xaml/presentation"
-             xmlns:converters="clr-namespace:Book.Converters"
-             xmlns:s="https://github.com/canton7/Stylet"
-             xmlns:sys="clr-namespace:System;assembly=mscorlib">
+﻿<Application x:Class="Book.App" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:local="clr-namespace:Book" xmlns:telerik="http://schemas.telerik.com/2008/xaml/presentation" xmlns:converters="clr-namespace:Book.Converters" xmlns:s="https://github.com/canton7/Stylet" xmlns:sys="clr-namespace:System;assembly=mscorlib">
     <Application.Resources>
         <ResourceDictionary>
             <converters:VisbilityToBooleanConverter x:Key="VisbilityToBooleanConverter" />
@@ -13,8 +6,8 @@
                 <ResourceDictionary Source="/Telerik.Windows.Themes.Fluent;component/Themes/System.Windows.xaml" />
                 <ResourceDictionary Source="/Telerik.Windows.Themes.Fluent;component/Themes/Telerik.Windows.Controls.xaml" />
                 <ResourceDictionary Source="/Telerik.Windows.Themes.Fluent;component/Themes/Telerik.Windows.Controls.Input.xaml" />
-                <ResourceDictionary Source="/Telerik.Windows.Themes.Fluent;component/Themes/Telerik.Windows.Controls.GridView.xaml" />
                 <ResourceDictionary Source="/Telerik.Windows.Themes.Fluent;component/Themes/Telerik.Windows.Controls.Navigation.xaml" />
+                <ResourceDictionary Source="/Telerik.Windows.Themes.Fluent;component/Themes/Telerik.Windows.Controls.GridView.xaml" />
                 <ResourceDictionary Source="/Telerik.Windows.Themes.Fluent;component/Themes/Telerik.Windows.Controls.RibbonView.xaml" />
                 <s:ApplicationLoader>
                     <s:ApplicationLoader.Bootstrapper>
