--- a/Book/Book/Pages/SiteDetailView.xaml
+++ b/Book/Book/Pages/SiteDetailView.xaml
@@ -26,24 +26,28 @@
                     <TextBlock Text="站点名称:" DockPanel.Dock="Left" VerticalAlignment="Center" Width="110"/>
                     <telerik:RadWatermarkTextBox Text="{Binding Path=ShowSite.Name,UpdateSourceTrigger=PropertyChanged}"
                                                  WatermarkContent="站点名称"
+                                                 IsReadOnly="{Binding Path=ShowSite.IsReadOnly}"
                                                  ToolTip="{Binding RelativeSource={RelativeSource Mode=Self},Path=WatermarkContent}" VerticalAlignment="Center"/>
                 </DockPanel>
                 <DockPanel Margin="10">
                     <TextBlock Text="站点主页地址:" DockPanel.Dock="Left" VerticalAlignment="Center" Width="110"/>
                     <telerik:RadWatermarkTextBox Text="{Binding Path=ShowSite.URL,UpdateSourceTrigger=PropertyChanged}"
                                                  WatermarkContent="站点主页地址"
+                                                 IsReadOnly="{Binding Path=ShowSite.IsReadOnly}"
                                                  ToolTip="{Binding RelativeSource={RelativeSource Mode=Self},Path=WatermarkContent}"
                                                  VerticalAlignment="Center"/>
                 </DockPanel>
                 <DockPanel Margin="10">
                     <telerik:RadWatermarkTextBox DockPanel.Dock="Right" Text="{Binding Path=ShowSite.SearchSize,UpdateSourceTrigger=PropertyChanged}"
                                                  WatermarkContent="搜索页容量"
+                                                 IsReadOnly="{Binding Path=ShowSite.IsReadOnly}"
                                                  ToolTip="{Binding RelativeSource={RelativeSource Mode=Self},Path=WatermarkContent}"
                                                  VerticalAlignment="Center"/>
                     <TextBlock Text="容量:" DockPanel.Dock="Right" Margin="5,0,0,0" VerticalAlignment="Center" Width="40"/>
                     <TextBlock Text="搜索地址:" DockPanel.Dock="Left" VerticalAlignment="Center" Width="110"/>
                     <telerik:RadWatermarkTextBox Text="{Binding Path=ShowSite.SearchURL,UpdateSourceTrigger=PropertyChanged}"
                                                  WatermarkContent="[s]表示搜索关键字参数,[p]表示页码参数"
+                                                 IsReadOnly="{Binding Path=ShowSite.IsReadOnly}"
                                                  ToolTip="{Binding RelativeSource={RelativeSource Mode=Self},Path=WatermarkContent}"
                                                  VerticalAlignment="Center"/>
                 </DockPanel>
@@ -51,6 +55,7 @@
                     <TextBlock Text="搜索结果节点信息:" DockPanel.Dock="Left" VerticalAlignment="Center" Width="110"/>
                     <telerik:RadWatermarkTextBox Text="{Binding Path=ShowSite.BookResultsNode,UpdateSourceTrigger=PropertyChanged}"
                                                  WatermarkContent="搜索结果节点信息"
+                                                 IsReadOnly="{Binding Path=ShowSite.IsReadOnly}"
                                                  ToolTip="{Binding RelativeSource={RelativeSource Mode=Self},Path=WatermarkContent}"
                                                  VerticalAlignment="Center"/>
                 </DockPanel>
@@ -58,6 +63,7 @@
                     <TextBlock Text="书籍名称节点信息:" DockPanel.Dock="Left" VerticalAlignment="Center" Width="110"/>
                     <telerik:RadWatermarkTextBox Text="{Binding Path=ShowSite.BookNameNode,UpdateSourceTrigger=PropertyChanged}"
                                                  WatermarkContent="书籍名称节点信息"
+                                                 IsReadOnly="{Binding Path=ShowSite.IsReadOnly}"
                                                  ToolTip="{Binding RelativeSource={RelativeSource Mode=Self},Path=WatermarkContent}"
                                                  VerticalAlignment="Center"/>
                 </DockPanel>
@@ -65,6 +71,7 @@
                     <TextBlock Text="作者节点信息:" DockPanel.Dock="Left" VerticalAlignment="Center" Width="110"/>
                     <telerik:RadWatermarkTextBox Text="{Binding Path=ShowSite.AuthorNode,UpdateSourceTrigger=PropertyChanged}"
                                                  WatermarkContent="作者节点信息"
+                                                 IsReadOnly="{Binding Path=ShowSite.IsReadOnly}"
                                                  ToolTip="{Binding RelativeSource={RelativeSource Mode=Self},Path=WatermarkContent}"
                                                  VerticalAlignment="Center"/>
                 </DockPanel>
@@ -72,6 +79,7 @@
                     <TextBlock Text="简介节点信息:" DockPanel.Dock="Left" VerticalAlignment="Center" Width="110"/>
                     <telerik:RadWatermarkTextBox Text="{Binding Path=ShowSite.DescriptionNode,UpdateSourceTrigger=PropertyChanged}"
                                                  WatermarkContent="简介节点信息"
+                                                 IsReadOnly="{Binding Path=ShowSite.IsReadOnly}"
                                                  ToolTip="{Binding RelativeSource={RelativeSource Mode=Self},Path=WatermarkContent}"
                                                  VerticalAlignment="Center"/>
                 </DockPanel>
@@ -79,6 +87,7 @@
                     <TextBlock Text="最新章节节点信息:" DockPanel.Dock="Left" VerticalAlignment="Center" Width="110"/>
                     <telerik:RadWatermarkTextBox Text="{Binding Path=ShowSite.UpdateNode,UpdateSourceTrigger=PropertyChanged}"
                                                  WatermarkContent="最新章节节点信息"
+                                                 IsReadOnly="{Binding Path=ShowSite.IsReadOnly}"
                                                  ToolTip="{Binding RelativeSource={RelativeSource Mode=Self},Path=WatermarkContent}"
                                                  VerticalAlignment="Center"/>
                 </DockPanel>
@@ -86,6 +95,7 @@
                     <TextBlock Text="书籍地址节点信息:" DockPanel.Dock="Left" VerticalAlignment="Center" Width="110"/>
                     <telerik:RadWatermarkTextBox Text="{Binding Path=ShowSite.BookURLNode,UpdateSourceTrigger=PropertyChanged}"
                                                  WatermarkContent="书籍地址节点信息"
+                                                 IsReadOnly="{Binding Path=ShowSite.IsReadOnly}"
                                                  ToolTip="{Binding RelativeSource={RelativeSource Mode=Self},Path=WatermarkContent}"
                                                  VerticalAlignment="Center"/>
                 </DockPanel>
@@ -93,6 +103,7 @@
                     <TextBlock Text="章节节点信息:" DockPanel.Dock="Left" VerticalAlignment="Center" Width="110"/>
                     <telerik:RadWatermarkTextBox Text="{Binding Path=ShowSite.ChapterNode,UpdateSourceTrigger=PropertyChanged}"
                                                  WatermarkContent="章节节点信息"
+                                                 IsReadOnly="{Binding Path=ShowSite.IsReadOnly}"
                                                  ToolTip="{Binding RelativeSource={RelativeSource Mode=Self},Path=WatermarkContent}"
                                                  VerticalAlignment="Center"/>
                 </DockPanel>
@@ -100,6 +111,7 @@
                     <TextBlock Text="章节名称节点信息:" DockPanel.Dock="Left" VerticalAlignment="Center" Width="110"/>
                     <telerik:RadWatermarkTextBox Text="{Binding Path=ShowSite.ChapterNameNode,UpdateSourceTrigger=PropertyChanged}"
                                                  WatermarkContent="章节名称节点信息"
+                                                 IsReadOnly="{Binding Path=ShowSite.IsReadOnly}"
                                                  ToolTip="{Binding RelativeSource={RelativeSource Mode=Self},Path=WatermarkContent}"
                                                  VerticalAlignment="Center"/>
                 </DockPanel>
@@ -107,6 +119,7 @@
                     <TextBlock Text="章节地址节点信息:" DockPanel.Dock="Left" VerticalAlignment="Center" Width="110"/>
                     <telerik:RadWatermarkTextBox Text="{Binding Path=ShowSite.ChapterUrlNode,UpdateSourceTrigger=PropertyChanged}"
                                                  WatermarkContent="章节地址节点信息"
+                                                 IsReadOnly="{Binding Path=ShowSite.IsReadOnly}"
                                                  ToolTip="{Binding RelativeSource={RelativeSource Mode=Self},Path=WatermarkContent}"
                                                  VerticalAlignment="Center"/>
                 </DockPanel>
@@ -114,6 +127,7 @@
                     <TextBlock Text="章节内容节点信息:" DockPanel.Dock="Left" VerticalAlignment="Center" Width="110"/>
                     <telerik:RadWatermarkTextBox Text="{Binding Path=ShowSite.ContentNode,UpdateSourceTrigger=PropertyChanged}"
                                                  WatermarkContent="章节内容节点信息"
+                                                 IsReadOnly="{Binding Path=ShowSite.IsReadOnly}"
                                                  ToolTip="{Binding RelativeSource={RelativeSource Mode=Self},Path=WatermarkContent}"
                                                  VerticalAlignment="Center"/>
                 </DockPanel>
